<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_to_restart">"You are about to restart your device to install the upgrade. Please don't turn off the device during the process."</string>
    <string name="access">Allow</string>
    <string name="alert_text_backup_data">"The system update will not affect your data. 
However, to ensure your data integrity, please perform a backup. Please restart your phone and install the update."</string>
    <string name="app_name">System Update</string>
    <string name="appbar_scrolling_view_behavior">com.oneplus.lib.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attention">Tips</string>
    <string name="back_button_label">Back</string>
    <string name="battery_low_prompt">The device needs to be above 20% charge to update. Please charge to continue.</string>
    <string name="battery_very_low_prompt">Battery is too low, please charge your phone to 5% before continuing with the update. Keep your phone plugged in.</string>
    <string name="btn_text_upgrade_now">Upgrade Now</string>
    <string name="cancel">Cancel</string>
    <string name="capital_off">OFF</string>
    <string name="capital_on">ON</string>
    <string name="check_upgrade_log">View Changelog</string>
    <string name="click_to_install">Click to install</string>
    <string name="continue_to_download">Continue to download</string>
    <string name="date_picker_day_of_week_typeface">sans-serif-medium</string>
    <string name="date_picker_day_typeface">sans-serif-medium</string>
    <string name="date_picker_month_typeface">sans-serif-medium</string>
    <string name="default_download_wifi">Download only via WiFi</string>
    <string name="default_download_wifi_auto">Auto-download over Wi-Fi</string>
    <string name="deleted_key">%1$s deleted</string>
    <string name="dont_wipe_data">"Don't clear data"</string>
    <string name="download">Download</string>
    <string name="download_cancel">Are you sure you want to cancel the download?</string>
    <string name="download_corrupted">The download could not be verified, please download again.</string>
    <string name="download_error">There was a problem communicating with the server during the download, please resume the download later.</string>
    <string name="download_error_notification_text">Try resuming the download later.</string>
    <string name="download_error_notification_title">Error in system update</string>
    <string name="download_fail">There was a problem during the download, please download again.</string>
    <string name="download_fail_by_no_network">No network connection, please reconnect and resume your download.</string>
    <string name="download_fail_title">Download failed</string>
    <string name="download_io_error">There is insufficient storage to download the update, please free up space and resume the download.</string>
    <string name="download_is_not_wifi">"Downloading over mobile data, additional charges may apply.
Continue?"</string>
    <string name="download_is_slow">"Your connection is too slow and it may take several minutes to download the update.
Continue?"</string>
    <string name="download_no_network">Network not detected, please try again later.</string>
    <string name="download_no_network_title">Network not detected</string>
    <string name="download_now">Download now</string>
    <string name="download_paused">"The download was paused because no network is available.
It will resume when there's a network."</string>
    <string name="download_paused_resume">"Wi-Fi connection lost, download paused. 
Please try to resume later."</string>
    <string name="download_paused_resume_by_manual">Are you sure you want to pause download? You can resume later.</string>
    <string name="download_percent">%d%%</string>
    <string name="download_remaining">%s left</string>
    <string name="download_retry">Download again</string>
    <string name="download_speed_text">%1$s, %2$s/s</string>
    <string name="download_state_update_paused">Download paused</string>
    <string name="download_view_version_features">Download the update features</string>
    <string name="downloaded_notification_error_text">Try resuming the download later.</string>
    <string name="downloaded_notification_error_title">Error downloading.</string>
    <string name="downloaded_notification_fail_text">There was a problem during the download, please try again later.</string>
    <string name="downloaded_notification_fail_title">Error downloading.</string>
    <string name="downloaded_notification_io_error_text">Free space and resume.</string>
    <string name="downloaded_notification_io_error_title">Not enough space.</string>
    <string name="downloaded_notification_pause_by_manual_text">Download was paused.</string>
    <string name="downloaded_notification_pause_text">The download was paused because no network is available.</string>
    <string name="downloaded_notification_pause_title">Download paused.</string>
    <string name="downloaded_notification_title">System update downloaded</string>
    <string name="downloading">Downloading %1$s of %2$s</string>
    <string name="downloading_notification_title">Downloading system update</string>
    <string name="exists_new_version_title">New system version detected</string>
    <string name="font_family_body_1_material">sans-serif</string>
    <string name="font_family_body_2_material">sans-serif-medium</string>
    <string name="font_family_button_material">sans-serif-medium</string>
    <string name="font_family_caption_material">sans-serif</string>
    <string name="font_family_title_material">sans-serif-medium</string>
    <string name="good_things_worth_waiting">Good things are worth waiting for</string>
    <string name="has_new_version_notification">A new version is detected, Go to H2OS OTA update</string>
    <string name="hydrogen_version">H₂OS version</string>
    <string name="install">Install</string>
    <string name="install_copy_fail">There was a problem installing the upgrade. Please try again later.</string>
    <string name="last_check_update">Last checked: %1$s</string>
    <string name="need_more_space">Insufficient storage space to upgrade, but also need %s of storage space. Please clear some space and try again.</string>
    <string name="network_tip">Current network is 2G/3G/4G. Continuing to download may incur fee from carrier.</string>
    <string name="network_wrarning_checkbox">Do not show reminder again</string>
    <string name="network_wrarning_text">This application produces data traffic. Execution recommended while using WiFi</string>
    <string name="network_wrarning_title">Reminder</string>
    <string name="next_button_label">Next</string>
    <string name="no_enough_space">Insufficient storage space. Please free up space and try again.</string>
    <string name="no_local_update_packges_title">Move installation package into root directory</string>
    <string name="no_update_yet">No update feature yet</string>
    <string name="no_upgrade_log">No update log available</string>
    <string name="notification_download_fail">Upgrade package download failed, please retry to download</string>
    <string name="notification_download_success">Download complete, click to update</string>
    <string name="notification_downloading">Downloading</string>
    <string name="notification_into_update_content">Tap to upgrade now</string>
    <string name="notification_into_update_title">System update package download complete</string>
    <string name="ok">@android:string/ok</string>
    <string name="oneplus_contorl_font_family_body1">sans-serif-book</string>
    <string name="oneplus_contorl_font_family_body2">sans-serif-medium</string>
    <string name="oneplus_contorl_font_family_button">sans-serif-medium</string>
    <string name="oneplus_contorl_font_family_descriptions">sans-serif-book</string>
    <string name="oneplus_contorl_font_family_display1">sans-serif-medium</string>
    <string name="oneplus_contorl_font_family_display2">sans-serif-book</string>
    <string name="oneplus_contorl_font_family_display3">sans-serif-light</string>
    <string name="oneplus_contorl_font_family_display4">sans-serif-regular</string>
    <string name="oneplus_read_contacts">Access Network</string>
    <string name="oneplus_rights_dialog_checkbox_text">Remember my selections</string>
    <string name="oneplus_rights_dialog_discription">You need the following permissions to use the system update</string>
    <string name="see_what_new">"Let's see what's new!"</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="str_abupdate_reboot">REBOOT</string>
    <string name="system_update">System update</string>
    <string name="system_update_download">@string/download_now</string>
    <string name="update_check_title">Check for updates</string>
    <string name="update_completed">Update completed</string>
    <string name="update_completed_welcome">"Let's see what's new!"</string>
    <string name="update_from_local">Local upgrade</string>
    <string name="update_wizard_info">View update features</string>
    <string name="wizard_update">Update features</string>
</resources>