<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/layout_content" android:background="@color/oneplus_contorl_bg_color_default" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/img_os" android:layout_width="fill_parent" android:layout_height="213.0dip" android:layout_marginTop="160.0dip" android:src="@drawable/img_h2_os_black" android:layout_centerHorizontal="true" />
    <TextView android:textColor="@color/oneplus_contorl_text_color_primary_default" android:gravity="center_horizontal" android:id="@id/tv_update_complete" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="160.0dip" android:text="@string/update_completed" android:layout_below="@id/img_os" android:layout_centerHorizontal="true" style="@style/oneplus_contorl_text_style_display1" />
    <TextView android:textColor="@color/oneplus_contorl_text_color_secondary_default" android:gravity="center_horizontal" android:id="@id/tv_os_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:layout_below="@id/tv_update_complete" android:layout_centerHorizontal="true" style="@style/oneplus_contorl_text_style_subheading" />
    <TextView android:textColor="@color/oneplus_contorl_text_color_secondary_default" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/oneplus_contorl_layout_margin_top1" android:text="@string/update_completed_welcome" android:layout_below="@id/tv_os_version" android:layout_centerHorizontal="true" style="@style/oneplus_contorl_text_style_subheading" />
    <com.oneplus.lib.widget.button.OPButton android:id="@id/btn_skip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/oneplus_contorl_margin_left1" android:text="@string/skip" android:layout_alignParentBottom="true" android:layout_marginStart="@dimen/oneplus_contorl_margin_left1" android:layout_alignParentStart="true" style="@style/OnePlus.DeviceDefault.Widget.Material.Button.Borderless" />
    <com.oneplus.lib.widget.button.OPButton android:id="@id/btn_start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/oneplus_contorl_margin_left1" android:text="@string/start" android:layout_alignParentBottom="true" android:layout_marginEnd="@dimen/oneplus_contorl_margin_left1" android:layout_alignParentEnd="true" />
</RelativeLayout>