<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/oneplus_contorl_bg_color_default" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/video_play_area" android:background="@drawable/bg_update_white" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <SurfaceView android:id="@id/video_play_surfaceView" android:layout_width="fill_parent" android:layout_height="607.0px" />
        <RelativeLayout android:id="@id/head_bar_panel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
            <ImageButton android:id="@id/back_btn" android:background="@null" android:padding="10.0dip" android:layout_width="41.0dip" android:layout_height="41.0dip" android:src="@drawable/op_ic_back" android:layout_marginStart="6.0dip" android:layout_alignParentStart="true" />
            <ImageButton android:id="@id/settings_btn" android:background="@null" android:padding="10.0dip" android:layout_width="41.0dip" android:layout_height="41.0dip" android:src="@drawable/op_ic_setting" android:layout_marginEnd="6.0dip" android:layout_alignParentEnd="true" />
            <ImageButton android:id="@id/app_upgrade_btn" android:background="@null" android:padding="10.0dip" android:layout_width="41.0dip" android:layout_height="41.0dip" android:src="@drawable/ic_app_update_v" android:layout_toLeftOf="@id/settings_btn" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/video_play_controll_panel" android:layout_width="fill_parent" android:layout_height="607.0px">
            <Button android:id="@id/video_play_btn" android:background="@drawable/play_btn" android:padding="10.0dip" android:layout_width="44.0dip" android:layout_height="44.0dip" android:layout_centerInParent="true" />
            <SeekBar android:id="@id/video_play_progress" android:layout_width="fill_parent" android:layout_height="20.0dip" android:layout_marginBottom="16.0dip" android:layout_alignParentBottom="true" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" android:layout_toStartOf="@id/video_play_mode_change_btn" />
            <ProgressBar android:id="@id/video_loading_progress_bar" android:visibility="gone" android:layout_width="44.0dip" android:layout_height="44.0dip" android:layout_centerInParent="true" />
            <Button android:id="@id/video_play_mode_change_btn" android:background="@drawable/play_in_full_screen" android:padding="9.0dip" android:layout_width="26.0dip" android:layout_height="26.0dip" android:layout_marginBottom="16.0dip" android:layout_alignParentBottom="true" android:layout_marginEnd="@dimen/oneplus_contorl_layout_margin_right1" android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout android:id="@id/update_infomation_container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/video_play_area">
        <LinearLayout android:orientation="vertical" android:id="@id/header" android:background="@color/oneplus_contorl_bg_color_default" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/oneplus_contorl_layout_margin_top2" android:minHeight="@dimen/header_min_height" android:layout_marginStart="@dimen/oneplus_contorl_layout_margin_left2" android:layout_marginEnd="@dimen/oneplus_contorl_layout_margin_right2">
            <ImageView android:id="@id/update_img" android:background="@drawable/bg_update" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" />
            <LinearLayout android:orientation="vertical" android:id="@id/version_name_layout" android:background="@color/oneplus_contorl_bg_color_default" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/oneplus_contorl_layout_margin_top2">
                <TextView android:textColor="@color/oneplus_contorl_text_color_primary_default" android:ellipsize="marquee" android:gravity="center_vertical" android:id="@id/version_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" style="@style/oneplus_contorl_text_style_subheading" />
                <TextView android:textSize="16.0sp" android:textColor="@color/download_state_font_color" android:gravity="center_vertical" android:id="@id/version_size" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/oneplus_contorl_layout_margin_top1" style="@style/oneplus_contorl_text_style_body1" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/download_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/oneplus_contorl_text_color_primary_default" android:gravity="start|center" android:id="@id/download_state" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/oneplus_contorl_text_style_subheading" />
                <ProgressBar android:id="@id/download_progressBar" android:layout_width="fill_parent" android:layout_height="@dimen/download_progressbar_height" android:layout_marginTop="@dimen/oneplus_contorl_margin_top1" android:max="100" android:progressDrawable="@drawable/progressbar_style" style="?android:progressBarStyleHorizontal" />
                <TextView android:textColor="@color/oneplus_contorl_text_color_secondary_default" android:gravity="center" android:id="@id/download_progress" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="@dimen/oneplus_contorl_margin_top1" android:layout_marginBottom="@dimen/download_progress_margin_bottom" style="@style/oneplus_contorl_text_style_body1" />
            </LinearLayout>
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <FrameLayout android:id="@id/layout_download_update" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentEnd="true">
                    <com.oneplus.lib.widget.button.OPButton android:textSize="16.0sp" android:gravity="center" android:id="@id/download_btn" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/download_btn_height" android:text="@string/system_update_download" style="@style/OnePlus.DeviceDefault.Widget.Material.Button.Borderless" />
                    <com.oneplus.lib.widget.button.OPButton android:textSize="16.0sp" android:gravity="center" android:id="@id/btn_ab_update_action" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/download_btn_height" android:text="@string/str_abupdate_reboot" style="@style/OnePlus.DeviceDefault.Widget.Material.Button.Borderless" />
                </FrameLayout>
            </RelativeLayout>
        </LinearLayout>
        <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/oneplus_contorl_layout_margin_top1" android:fillViewport="true" android:layout_below="@id/header">
            <RelativeLayout android:orientation="vertical" android:background="@color/oneplus_contorl_bg_color_default" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/download_layout">
                <FrameLayout android:paddingTop="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/download_btn_height">
                    <View android:id="@id/shadow" android:background="@color/oneplus_contorl_divider_color_default" android:layout_width="fill_parent" android:layout_height="@dimen/oneplus_contorl_divider_height_standard" android:layout_marginStart="@dimen/oneplus_contorl_layout_margin_left2" android:layout_marginEnd="@dimen/oneplus_contorl_layout_margin_right2" />
                    <FrameLayout android:id="@id/version_info" android:paddingTop="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                </FrameLayout>
                <com.oneplus.lib.widget.button.OPButton android:textSize="16.0sp" android:gravity="center" android:id="@id/check_update_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:minHeight="@dimen/download_btn_height" android:text="@string/update_check_title" android:layout_alignParentBottom="true" android:layout_marginEnd="16.0dip" android:layout_alignParentEnd="true" style="@style/OnePlus.DeviceDefault.Widget.Material.Button.Borderless" />
            </RelativeLayout>
        </ScrollView>
        <FrameLayout android:id="@id/header_layout" android:background="@color/version_name_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="66.0dip">
            <ImageButton android:layout_gravity="start" android:id="@id/btn_back" android:background="?android:actionBarItemBackground" android:layout_width="@dimen/oneplus_contorl_icon_size_button" android:layout_height="@dimen/oneplus_contorl_icon_size_button" android:layout_marginTop="31.0dip" android:src="@drawable/ic_back_v" android:scaleType="centerInside" android:layout_marginStart="@dimen/oneplus_contorl_layout_margin_left2" />
            <ImageButton android:layout_gravity="end" android:id="@id/app_update" android:background="?android:actionBarItemBackground" android:layout_width="@dimen/oneplus_contorl_icon_size_button" android:layout_height="@dimen/oneplus_contorl_icon_size_button" android:layout_marginTop="31.0dip" android:src="@drawable/ic_app_update_v" android:scaleType="centerInside" android:layout_marginEnd="56.0dip" />
            <ImageButton android:layout_gravity="end" android:id="@id/setting" android:background="?android:actionBarItemBackground" android:layout_width="@dimen/oneplus_contorl_icon_size_button" android:layout_height="@dimen/oneplus_contorl_icon_size_button" android:layout_marginTop="31.0dip" android:src="@drawable/ic_settings_v" android:scaleType="centerInside" android:layout_marginEnd="@dimen/oneplus_contorl_layout_margin_right2" />
        </FrameLayout>
    </RelativeLayout>
</RelativeLayout>